<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!-- Paramètres qui apparaissent toujours dans l'overflow-->

    <item android:id="@+id/change_view"
        android:title="@string/change_view"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_view_module_white_24dp"
        />

    <item android:id="@+id/new_task"
        android:title="@string/new_task"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_circle_white_24dp"
        />

    <item android:id="@id/new_task" android:title="@string/new_task"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/sort_tasks" android:title="@string/sort_tasks"
        android:orderInCategory="103" app:showAsAction="never" />
    <item android:id="@id/change_view" android:title="@string/change_view"
        android:orderInCategory="104" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="105" app:showAsAction="never" />

</menu>
