<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:background="@color/primary"
        android:gravity="center_vertical"
        android:paddingLeft="16dp">

        <!-- imeOptions sert à passer au prochain edittext en appuyant sur entrée -->

        <EditText android:hint="@string/hint_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/box_for_edit_text"
            android:padding="8dp"
            android:imeOptions="actionNext"
            android:layout_marginRight="8dp">
            > <!-- transparent color, because boxed -->
        </EditText>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="0">
        </Spinner>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow_toolbar" />

    <EditText android:hint="@string/hint_taskdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/task"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="8"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <requestFocus/>
    </EditText>


    <Button android:text="@string/button_addtask"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:textAllCaps="true"
        android:onClick="AddTask">

    </Button>



</LinearLayout>

